# ParameterOperations

./: CMakeLists.txt  ParamOpFunctionTracer.h  ParameterOperationFunctions.cpp  ParameterOperationTypes.h  ParameterOperations.cpp  ParameterOperations.rc  ParameterTypes.h  README.md
docs/: FunctionCategories.md  ParamOp_RegisterOperationFunction.csv  ParamOp_RegisterOperationType.csv
scripts/: export_paramops.py  gen_register_operation_function_cpp.py  gen_register_operation_type_cpp.py  ida_export_decompiled_register_operation_function_cpp.py  ida_rename_paramop_funcs_from_csv.py
